# ten-vad

./: .gitattributes  .gitignore  LICENSE  README.md  README_VAD_TRAINER.md  analyze_onnx_weights.py  config.json  debug.ipynb  debug_onnx_model.onnx  debug_torch_model.onnx  export_pytorch_to_onnx.py  ih_l0.pth  infer_model.onnx  infered_pytorch.onnx  pickle_input.pkl  prepare_vad_data.py  requirements_vad_trainer.txt  setup.py  ten_vad_cursor.py  ten_vad_exported.onnx  ten_vad_onnx_weights.pth  ten_vad_pytorch.pth  ten_vad_reconstructed.py  ten_vad_resverse.py  ten_vad_reverse.ipynb  ten_vad_torch.py  test_model.py  train_vad_example.py  truncated_onnx.ipynb  vad_exported_result.txt  vad_result.txt  vad_trainer.py
examples/: CMakeLists.txt  build-and-deploy-android.sh  build-and-deploy-ios.sh  build-and-deploy-mac.sh  build-and-deploy-windows.bat  main.c  plot_pr_curves.py  sample_array.h  test.py  test_node.js
examples_onnx/: CMakeLists.txt  build-and-deploy-linux.sh  requirements.txt  vad_demo.py
include/: ten_vad.h  ten_vad.py
testset/: testset-audio-01.scv  testset-audio-02.scv  testset-audio-03.scv  testset-audio-04.scv  testset-audio-05.scv  testset-audio-06.scv  testset-audio-07.scv  testset-audio-08.scv  testset-audio-09.scv  testset-audio-10.scv  testset-audio-11.scv  testset-audio-12.scv  testset-audio-13.scv  testset-audio-14.scv  testset-audio-15.scv  testset-audio-16.scv  testset-audio-17.scv  testset-audio-18.scv  testset-audio-19.scv  testset-audio-20.scv  testset-audio-21.scv  testset-audio-22.scv  testset-audio-23.scv  testset-audio-24.scv  (+6 more)
(+9 files in other folders)
